Adding a new end point
